# opam

./: master_changes.md
shell/: vendor_cmdliner.sh
src/client/: opamAdminCommand.ml  opamArg.ml  opamArg.mli  opamArgTools.ml  opamArgTools.mli  opamCommands.ml
src/core/cmdliner/patches/: fix_ambiguous_completions.patch
src/core/cmdliner/tool/: opamCmdliner_tool.ml
src/state/: opamEnv.ml  opamSwitchState.ml
src/state/shellscripts/: dune
tests/reftests/: action-disk.test  depext-only.test  env.unix.test  init-scripts.unix.test  init-scripts.win32.test  pin.test
